crates/products/agent-tools/tools/src/api/snapshots/wt_tools__api__tests__cli_json_output__cancel_run.snap
---
source: crates/products/agent-tools/tools/src/api/tests.rs
expression: normalized
---
{
  "result": {
    "data": "Operation completed.",
    "type": "confirmation"
  },
  "version": 1
}
