crates/products/agent-tools/tools/src/api/snapshots/wt_tools__api__tests__cli_json_output__log_job.snap
---
source: crates/products/agent-tools/tools/src/api/tests.rs
expression: normalized
---
{
  "result": {
    "data": "build complete\n",
    "type": "ci_job_log"
  },
  "version": 1
}
