crates/products/agent-tools/tools/src/api/snapshots/wt_tools__api__tests__cli_json_output__set_mr.snap
---
source: crates/products/agent-tools/tools/src/api/tests.rs
expression: normalized
---
{
  "result": {
    "data": {
      "base": "main",
      "body": "First paragraph.\n\nSecond paragraph.",
      "draft": false,
      "handle": "7",
      "head": "abc123",
      "jobs": [
        {
          "handle": "44",
          "name": "checks",
          "run": "91",
          "state": "success",
          "url": "https://github.test/jobs/44"
        }
      ],
      "review_state": "approved",
      "state": "open",
      "threads": [
        {
          "comments": [
            {
              "author": "reviewer",
              "body": "Handle this error.",
              "url": "https://github.test/thread-1"
            }
          ],
          "handle": "T:thread-1",
          "line": 42,
          "path": "src/login.rs",
          "resolvable": true,
          "resolved": false
        }
      ],
      "title": "Fix login",
      "url": "https://github.test/acme/widget/pull/7"
    },
    "type": "change_request"
  },
  "version": 1
}
