crates/products/agent-tools/tools/src/api/snapshots/wt_tools__api__tests__cli_json_output__show_run.snap
---
source: crates/products/agent-tools/tools/src/api/tests.rs
expression: normalized
---
{
  "result": {
    "data": {
      "branch": "wt/fix",
      "handle": "91",
      "head": "abc123",
      "name": "CI",
      "state": "success",
      "trigger": "pull_request",
      "url": "https://github.test/runs/91"
    },
    "type": "ci_run"
  },
  "version": 1
}
